support get container status